create network module with hilt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,11 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField "String", "BASE_URL",  "\"https://http-nodejs-production-7013.up.railway.app/api/\""
+        }
         release {
+            buildConfigField "String", "BASE_URL",  "\"https://http-nodejs-production-7013.up.railway.app/api/\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -79,6 +83,9 @@ dependencies {
     //Retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    /** OkHttp */
+    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     //CircularImage
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //Shimmer
